Fixes issue 17836: Add Jump-to-selected-row in grid Made select count clickable, changed style

--- a/modules/org.openbravo.client.application/web/org.openbravo.userinterface.smartclient/openbravo/skins/Default/org.openbravo.client.application/ob-form-styles.css
+++ b/modules/org.openbravo.client.application/web/org.openbravo.userinterface.smartclient/openbravo/skins/Default/org.openbravo.client.application/ob-form-styles.css
@@ -47,6 +47,7 @@
 =======================================================================*/
 
 .OBFormField,
+.OBFormFieldClickable,
 .OBFormFieldDisabled,
 .OBFormFieldFocused,
 .OBFormFieldError {
