--- a/modules/org.openbravo.client.application/web/org.openbravo.userinterface.smartclient/openbravo/skins/Default/org.openbravo.client.application/ob-grid-styles.css
+++ b/modules/org.openbravo.client.application/web/org.openbravo.userinterface.smartclient/openbravo/skins/Default/org.openbravo.client.application/ob-grid-styles.css
@@ -176,12 +176,18 @@
   border-top: 1px solid #b2b5b0;
 }
 
+.OBGridFilterStaticTextClickable
 .OBGridFilterStaticText {
   font-family: 'lucida sans', sans-serif;
   font-size: 11px;
   font-weight: normal;
   color: #333333;
   padding: 2px 0px 0px 0px;
+}
+
+.OBGridFilterStaticTextClickable {
+    background-color: #ffe1c0;
+    cursor: pointer;
 }
 
 .OBGridFilterFunnelBackground {
